--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -81,27 +81,13 @@
 
 	    <div class="tab-pane" role="tabpanel" id="DetailPage">
 			<div class="row">
-				<div class="col-sm-6 col-md-4">
-					<div class="row">
-				  		<div class="col-xs-5 col-sm-5">
-			             	<h5>Detail</h5>
-							<div id="DetailMessageDisplay" class="m-2"></div>
-                    		<button id="DuesStatementButton" data-parcel-id="" class="btn btn-sm btn-success me-1 mb-1 " type="button" role="button">
-								Dues Statement
-							</button>
-							<button id="NewOwnerButton" data-parcel-id="" data-owner-id="" class="btn btn-sm btn-warning me-1 mb-1 " type="button" role="button">
-								New Owner
-							</button>
-							<button id="CommunicationsButton" data-parcel-id="" data-owner-id="" class="btn btn-sm btn-info me-1 mb-1 " type="button" role="button">
-								Communications
-							</button>
-							<!--
-							<div id="AddAssessment">
-							</div>
-							-->
-		            	</div>
+				<div class="col-sm-6 col-md-5 col-lg-4">
 
-    					<div class="col-xs-7 col-sm-7">
+						<!--
+						<div class="row">
+    					<div class="col-xs-6 col-sm-6">
+    					<div class="col">
+						-->
 	                		<h5 class="mt-2">Property Detail</h5>
 							<form id="UpdatePropertyForm" class="needs-validation" novalidate>
 								<table class="table table-sm table-borderless">
@@ -114,6 +100,7 @@
 										<tr class="small"><th class="d-none d-md-table-cell">State: </th><td id="Property_State" class="d-none d-md-table-cell"></td></tr>
 										<tr class="small"><th class="d-none d-md-table-cell">Zip Code: </th><td id="Property_Zip" class="d-none d-md-table-cell"></td></tr>
 										<tr class="small"><th>Total Due: </th><td id="TotalDue"></td></tr>
+										<!--
 										<tr class="small"><th class="d-none d-md-table-cell">Rental: </th><td class="d-none d-md-table-cell">
 											<input id="Rental" name="Rental" type="checkbox" class="form-check-input shadow-none">
 										</td></tr>
@@ -126,6 +113,7 @@
 										<tr class="small"><th class="d-none d-md-table-cell">Bankruptcy: </th><td class="d-none d-md-table-cell">
 											<input id="Bankruptcy" name="Bankruptcy" type="checkbox" class="form-check-input shadow-none">
 										</td></tr>
+										-->
 										<tr  class="small"><th>Use Email: </th><td>
 											<input id="UseEmail" name="UseEmail" class="form-check-input shadow-none" type="checkbox">
 										</td></tr>
@@ -139,13 +127,27 @@
 									<i class="fa fa-floppy-o me-1"></i> Save Property
 								</button>
 								<div id="UpdatePropertyMessageDisplay" class="m-2"></div>
-							</form>
-						</div>
 
-		        	</div><!-- row -->
+								<div id="DetailMessageDisplay" class="m-2"></div>
+								<button id="DuesStatementButton" data-parcel-id="" class="btn btn-sm btn-success me-1 mb-1 " type="button" role="button">
+									Dues Statement
+								</button>
+								<button id="NewOwnerButton" data-parcel-id="" data-owner-id="" class="btn btn-sm btn-warning me-1 mb-1 " type="button" role="button">
+									New Owner
+								</button>
+								<button id="CommunicationsButton" data-parcel-id="" data-owner-id="" class="btn btn-sm btn-info me-1 mb-1 " type="button" role="button">
+									Communications
+								</button>
+								<!--
+								<div id="AddAssessment">
+								</div>
+								-->
+
+							</form>
+
 				</div>
 
-				<div class="col-sm-6 col-md-8">
+				<div class="col-sm-6 col-md-7 col-lg-8">
 				  	<h5 class="mt-2">Owners</h5>
 				    <table class="table table-striped">
 				        <tbody id="PropertyOwnersTbody">
