working on owner update

--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -123,26 +123,26 @@
 									</tbody>
 								</table>
 
-								<button type="submit" class="btn btn-success m-2">
+								<button type="submit" class="btn btn-primary me-1 mb-1">
 									<i class="fa fa-floppy-o me-1"></i> Save Property
 								</button>
-								<div id="UpdatePropertyMessageDisplay" class="m-2"></div>
 
-								<div id="DetailMessageDisplay" class="m-2"></div>
-								<button id="DuesStatementButton" data-parcel-id="" class="btn btn-sm btn-success me-1 mb-1 " type="button" role="button">
-									Dues Statement
+								<button id="DuesStatementButton" data-parcel-id="" class="btn btn-success me-1 mb-1 " type="button" role="button">
+									<i class="fa fa-bank me-1"></i> Dues Statement
 								</button>
-								<button id="NewOwnerButton" data-parcel-id="" data-owner-id="" class="btn btn-sm btn-warning me-1 mb-1 " type="button" role="button">
-									New Owner
+								<button id="NewOwnerButton" data-parcel-id="" data-owner-id="" class="btn btn-warning me-1 mb-1 " type="button" role="button">
+									<i class="fa fa-user-circle-o me-1"></i> New Owner Id
 								</button>
-								<button id="CommunicationsButton" data-parcel-id="" data-owner-id="" class="btn btn-sm btn-info me-1 mb-1 " type="button" role="button">
-									Communications
+								<button id="CommunicationsButton" data-parcel-id="" data-owner-id="" class="btn btn-info me-1 mb-1 " type="button" role="button">
+									<i class="fa fa-bullhorn me-1"></i> Communications
 								</button>
 								<!--
 								<div id="AddAssessment">
 								</div>
 								-->
 
+								<div id="DetailMessageDisplay" class="m-2"></div>
+								<div id="UpdatePropertyMessageDisplay" class="m-2"></div>
 							</form>
 
 				</div>
@@ -362,7 +362,7 @@
 						</div>
 
 						<div class="col-md-4"><!-- Col 2 -->
-							<button type="submit" class="btn btn-success ">
+							<button type="submit" class="btn btn-success  shadow-none">
 								<i class="fa fa-floppy-o me-1"></i> Save Owner
 							</button>
 							<div id="UpdateOwnerMessageDisplay" class="m-2"></div>
@@ -421,7 +421,7 @@
 								</div>
 							</div>
 							<div class="mb-2 form-floating">
-								<textarea id="updComments" name="updComments" type="text" class="form-control" style="height: 100px"></textarea>
+								<textarea id="updComments" name="updComments" type="text" class="form-control  shadow-none" style="height: 100px"></textarea>
 								<label   for="updComments" class="form-label">Comments</label>
 							</div>
 							<div class="mb-2 form-floating">
