--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -499,6 +499,107 @@
 </div>
 
 
+<div id="AssessmentUpdateModal" class="modal fade" role="dialog" tabindex="-1">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">
+                    <img class="m-2" src="https://grhawebstorage.blob.core.windows.net/images/logo-photo.jpg"> Update Assessment
+                </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+
+            <div class="modal-body">
+				<form id="UpdateAssessmentForm" class="needs-validation" novalidate>
+					<div class="row">			
+						<div class="col-md-4"><!-- Col 1 -->
+							<input id="assParcel_ID" name="Parcel_ID" type="text" readonly hidden>
+							<div id="assParcelLocation" class="mb-2">
+								Parcel Location
+							</div>
+
+		                    <div class="form-floating">
+								<input  id="assOwnerID" name="OwnerID" type="text" class="form-control shadow-none" readonly />
+								<label for="assOwnerID">Owner Id</label>
+                        	</div>
+							<!--
+							<div class="mb-2">
+								<input id="updCurrentOwner" name="CurrentOwner" class="form-check-input shadow-none" type="checkbox" disabled />
+								<label for="updCurrentOwner" class="form-label">Current Owner</label>
+							</div>
+							<div class="mb-2 form-floating">
+								<input  id="updOwner_Name1" name="Owner_Name1" type="text" class="form-control  shadow-none" maxlength="50" required />
+								<label for="updOwner_Name1">Owner Name1</label>
+								<div class="invalid-feedback">
+									Owner Name1 is required
+								</div>
+							</div>
+							<div class="mb-2 form-floating">
+								<input  id="updOwner_Name2" name="Owner_Name2" type="text" class="form-control shadow-none" maxlength="50" />
+								<label for="updOwner_Name2">Owner Name2</label>
+							</div>
+		                    <div class="mb-2 form-floating">
+                            	<input  id="updDatePurchased" name="DatePurchased" type="date" class="form-control shadow-none" >
+                            	<label for="updDatePurchased">Date Purchased</label>
+                        	</div>
+							<div class="mb-2 form-floating">
+								<input  id="updMailing_Name" name="Mailing_Name" type="text" class="form-control shadow-none" maxlength="50" />
+								<label for="updMailing_Name">Mailing Name</label>
+							</div>
+							-->
+						</div>
+
+						<div class="col-md-4"><!-- Col 2 -->
+							<button type="submit" class="btn btn-success  shadow-none">
+								<i class="fa fa-floppy-o me-1"></i> Save Assessment
+							</button>
+							<div id="UpdateAssessmentMessageDisplay" class="m-2"></div>
+
+							<!--
+							<div class="mb-2">
+								<input id="updAlternateMailing" name="AlternateMailing" class="form-check-input shadow-none" type="checkbox" />
+								<label for="updAlternateMailing">Alternate Mailing</label>
+							</div>
+							<div class="mb-2 form-floating">
+								<input  id="updAlt_Address_Line1" name="Alt_Address_Line1" type="text" class="form-control shadow-none" />
+								<label for="updAlt_Address_Line1">Address Line1</label>
+							</div>
+							<div class="mb-2 form-floating">
+								<input  id="updAlt_Address_Line2" name="Alt_Address_Line2" type="text" class="form-control shadow-none" maxlength="50" />
+								<label for="updAlt_Address_Line2">Address Line2</label>
+							</div>
+							<div class="mb-2 form-floating">
+								<input  id="updAlt_City" name="Alt_City" type="text" class="form-control shadow-none" maxlength="40" />
+								<label for="updAlt_City">Address City</label>
+							</div>
+							<div class="mb-2 form-floating">
+								<input  id="updAlt_State" name="Alt_State" type="text" class="form-control shadow-none" maxlength="20" />
+								<label for="updAlt_State">Address State</label>
+							</div>
+							<div class="mb-2 form-floating">
+								<input  id="updAlt_Zip" name="Alt_Zip" type="text" class="form-control shadow-none" maxlength="20" />
+								<label for="updAlt_Zip">Address Zip</label>
+							</div>
+							-->
+						</div>
+
+						<div class="col-md-4"><!-- Col 3 -->
+							Col 3
+						</div>
+					</div>
+
+				</form>
+
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <div id="EditPage" class="modal fade" role="dialog" tabindex="-1">
 	    <div class="modal-dialog modal-lg">
 	      <div class="modal-content">
