adding ass fields to modal

--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -533,11 +533,22 @@
 								<label for="updOwner_Name2">Owner Name2</label>
 							</div>
 
+							<div class="mb-2 form-floating">
+								<input  id="updDuesAmt" name="DuesAmt" type="text" class="form-control shadow-none" />
+								<label for="updDuesAmt">Dues Amt</label>
+							</div>
+
+							<div class="mb-2 form-floating">
+							    <input  id="updDateDue" name="DateDue" type="date" class="form-control shadow-none" >
+                            	<label for="updDateDue">Date Due</label>
+							</div>
+
 							<!--
     "id": "12007",
     "OwnerID": 1,
     "Parcel_ID": "R72617307 0001",
     "FY": 2007,
+
     "DuesAmt": "$89.00",
     "DateDue": "10/1/2006 0:00:00",
     "Paid": 1,
