--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -584,11 +584,11 @@
                             	<label for="assDisposition">Disposition</label>
 							</div>
 							<div class="mb-2 form-floating">
-							    <input  id="assFilingFee" name="FilingFee" type="number" class="form-control shadow-none" >
+							    <input  id="assFilingFee" name="FilingFee" type="number" step="0.01" min="0" class="form-control shadow-none" >
                             	<label for="assFilingFee">Filing Fee</label>
 							</div>
 							<div class="mb-2 form-floating">
-							    <input  id="assReleaseFee" name="ReleaseFee" type="number" class="form-control shadow-none" >
+							    <input  id="assReleaseFee" name="ReleaseFee" type="number" step="0.01" min="0" class="form-control shadow-none" >
                             	<label for="assReleaseFee">Amount Paid</label>
 							</div>
 							<div class="mb-2 form-floating">
@@ -603,7 +603,7 @@
 
 						<div class="col-md-4"><!-- Col 3 -->
 							<div class="mb-2 form-floating">
-							    <input  id="assAmountPaid" name="AmountPaid" type="number" class="form-control shadow-none" >
+							    <input  id="assAmountPaid" name="AmountPaid" type="number" step="0.01" min="0" class="form-control shadow-none" >
                             	<label for="assAmountPaid">AmountPaid</label>
 							</div>
 							<div class="mb-2">
@@ -611,11 +611,11 @@
                             	<label for="assStopInterestCalc">Stop Interest Calc</label>
 							</div>
 							<div class="mb-2 form-floating">
-							    <input  id="assFilingFeeInterest" name="FilingFeeInterest" type="number" class="form-control shadow-none" >
+							    <input  id="assFilingFeeInterest" name="FilingFeeInterest" type="number" step="0.01" min="0" class="form-control shadow-none" >
                             	<label for="assFilingFeeInterest">Filing Fee Interest</label>
 							</div>
 							<div class="mb-2 form-floating">
-							    <input  id="assAssessmentInterest" name="AssessmentInterest" type="number" class="form-control shadow-none" >
+							    <input  id="assAssessmentInterest" name="AssessmentInterest" type="number" step="0.01" min="0" class="form-control shadow-none" >
                             	<label for="assAssessmentInterest">Assessment Interest</label>
 							</div>
 							<div class="mb-2">
@@ -623,7 +623,7 @@
                             	<label for="assInterestNotPaid">Interest Not Paid</label>
 							</div>
 							<div class="mb-2 form-floating">
-							    <input  id="assBankFee" name="BankFee" type="number" class="form-control shadow-none" >
+							    <input  id="assBankFee" name="BankFee" type="number" step="0.01" min="0" class="form-control shadow-none" >
                             	<label for="assBankFee">Bank Fee</label>
 							</div>
 							<div class="mb-2 form-floating">
