--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -163,18 +163,6 @@
 			</div><!-- row -->
 		</div><!-- end of Detail -->
 
-	    <div class="tab-pane" role="tabpanel" id="CommPage">
-			<h5>Communications</h5>
-		    <div id="CommunicationsNew"></div>
-		    <p>
-		    	<div id="CommunicationsParcel"></div>
-			</p>
-		    <table id="CommListDisplay" class="table table-striped table-sm mt-2">
-		    	<tbody>
-		    	</tbody>
-		    </table>
-
-	 	</div><!-- end of Comm -->
 
 	    <div class="tab-pane" role="tabpanel" id="ReportsPage">
 				<div class="row">
@@ -438,58 +426,6 @@
 
 				</form>
 
-				<!--
-							        if (createNew) {
-            tr += '<tr><th>Owner Id:</th><td>CREATE NEW OWNER</td></tr>';
-        } else {
-            tr += '<tr><th>Owner Id:</th><td>' + rec.OwnerID + '</td></tr>';
-        }
-        tr += '<tr><th>Location:</th><td>' + editHoaRec.Parcel_Location + '</td></tr>';
-
-        tr += '<tr><th>Current Owner: </th><td>' + util.setCheckbox(rec.CurrentOwner) + '</td></tr>';
-        tr += '<tr><th>Owner Name1:</th><td>' + util.setInputText("ownerName1", rec.Owner_Name1, "50") + '</td></tr>';
-        tr += '<tr><th>Owner Name2:</th><td>' + util.setInputText("ownerName2", rec.Owner_Name2, "50") + '</td></tr>';
-        tr += '<tr><th>Date Purchased:</th><td>' + util.setInputDate("datePurchased", rec.DatePurchased, "10") + '</td></tr>';
-		                        <div class="form-floating">
-                            <input type="date" class="form-control shadow-none" id="MetricsStartDate">
-                            <label for="MetricsStartDate">Metrics Start Date</label>
-                        </div>
-
-        tr += '<tr><th>Mailing Name:</th><td>' + util.setInputText("mailingName", rec.Mailing_Name, "50") + '</td></tr>';
-        tr += '<tr><th>Alternate Mailing: </th><td>' + util.setCheckboxEdit('alternateMailingCheckbox', rec.AlternateMailing) + '</td></tr>';
-        tr += '<tr><th>Address Line1:</th><td>' + util.setInputText("addrLine1", rec.Alt_Address_Line1, "50") + '</td></tr>';
-        tr += '<tr><th>Address Line2:</th><td>' + util.setInputText("addrLine2", rec.Alt_Address_Line2, "50") + '</td></tr>';
-        tr += '<tr><th>City:</th><td>' + util.setInputText("altCity", rec.Alt_City, "40") + '</td></tr>';
-        tr += '<tr><th>State:</th><td>' + util.setInputText("altState", rec.Alt_State, "20") + '</td></tr>';
-        tr += '<tr><th>Zip:</th><td>' + util.setInputText("altZip", rec.Alt_Zip, "20") + '</td></tr>';
-
-        tr += '<tr><th>Owner Phone:</th><td>' + util.setInputText("ownerPhone", rec.Owner_Phone, "30") + '</td></tr>';
-        tr += '<tr><th>Email Addr: </th><td>' + util.setInputText("emailAddr", rec.EmailAddr, "90") + '</td></tr>';
-        tr += '<tr><th>Email Addr2: </th><td>' + util.setInputText("emailAddr2", rec.EmailAddr2, "90") + '</td></tr>';
-        tr += '<tr><th>Comments: </th><td>' + util.setInputText("ownerComments", rec.Comments, "90") + '</td></tr>';
-        tr += '<tr><th>Last Changed:</th><td>' + rec.LastChangedTs + '</td></tr>';
-        tr += '<tr><th>Changed by:</th><td>' + rec.LastChangedBy + '</td></tr>';
-        tr += '</div>';
-
-        $EditTable2ColBody.html(tr);
-
-        if (salesRec != null) {
-            tr2 = '<div class="form-group">';
-            tr2 += '<tr><td><h3>Sales Information</h3></td></tr>';
-            tr2 += '<tr><th>Sales Owner Name: </th><td>' + salesRec.OWNERNAME1 + '</td></tr>';
-            tr2 += '<tr><th>Sale Date: </th><td>' + salesRec.SALEDT + '</td></tr>';
-            tr2 += '<tr><th>Sales Mailing Name1: </th><td>' + salesRec.MAILINGNAME1 + '</td></tr>';
-            tr2 += '<tr><th>Sales Mailing Name2: </th><td>' + salesRec.MAILINGNAME2 + '</td></tr>';
-            tr2 += '<tr><th>Sales Address1: </th><td>' + salesRec.PADDR1 + '</td></tr>';
-            tr2 += '<tr><th>Sales Address2: </th><td>' + salesRec.PADDR2 + '</td></tr>';
-            tr2 += '<tr><th>Sales Address3: </th><td>' + salesRec.PADDR3 + '</td></tr>';
-            tr2 += '</div>';
-        }
-
-        $EditTable2Col2Body.html(tr2);
-
-				-->
-
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
@@ -651,61 +587,48 @@
     </div>
 </div>
 
+<!--
+	    <div class="tab-pane" role="tabpanel" id="CommPage">
+			<h5>Communications</h5>
+		    <div id="CommunicationsNew"></div>
+		    <p>
+		    	<div id="CommunicationsParcel"></div>
+			</p>
+	 	</div>
+-->
+<div id="CommunicationsModal" class="modal fade" role="dialog" tabindex="-1">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">
+                    <img class="m-2" src="https://grhawebstorage.blob.core.windows.net/images/logo-photo.jpg"> Communications
+                </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
 
-<div id="EditPage" class="modal fade" role="dialog" tabindex="-1">
-	    <div class="modal-dialog modal-lg">
-	      <div class="modal-content">
-	        <div class="modal-header">
-	          <h5 id="EditPageHeader" class="modal-title"></h5>
-			  <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-	        </div>
-	        <div class="modal-body">
-           		<h5 class="editValidationError" style="color:red;"></h5>
-				<table id="EditTable" class="table-sm">
-					<tbody>
-					</tbody>
-				</table>
-	        </div>
-	        <div class="modal-footer">
-	        	<div id="EditPageButton">
-	        	</div>
-	        </div>
-	      </div>
-	    </div>
-</div><!-- /EditPage -->
+            <div class="modal-body">
+				<form id="CommunicationsForm" class="needs-validation" novalidate>
+					<div class="row">			
+						<div class="col"><!-- Col 1 -->
+							<input id="commParcel_ID" name="Parcel_ID" type="text" readonly hidden>
 
-<div id="EditPage2Col" class="modal fade" role="dialog" tabindex="-1">
-	    <div class="modal-dialog modal-lg">
-	      <div class="modal-content">
-	        <div class="modal-header">
-	            <h5 id="EditPage2ColHeader" class="modal-title"></h5>
-				<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-	        </div>
-	        <div class="modal-body">
-           		<h5 class="editValidationError" style="color:red;"></h5>
-				<div class="row">
-					<div class="col-sm-7">
-				        <table id="EditTable2Col" class="table-sm">
-				        	<tbody>
-				        	</tbody>
-				        </table>
+							<table class="table table-striped table-sm ">
+								<tbody id="CommunicationsTbody">
+								</tbody>
+							</table>
+
+						</div>
+
 					</div>
-				    <div class="col-sm-5">
-				        <table id="EditTable2Col2" class="table-sm">
-				        	<tbody>
-				        	</tbody>
-				        </table>
-					</div>
-				</div>
+				</form>
 
-	        </div>
-	        <div class="modal-footer">
-	        	<div id="EditPage2ColButton">
-	        	</div>
-	        </div>
-	      </div>
-	    </div>
-</div><!-- /EditPage2Col -->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div id="ConfirmationModal" class="modal fade" role="dialog" tabindex="-1">
 	    <div class="modal-dialog modal-sm">
