--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -32,7 +32,6 @@
 			<ul class="nav navbar-nav">
                 <li class="nav-item"><a class="nav-link active" href="#SearchPage" data-bs-toggle="tab"><i class="fa fa-search fa-lg"></i> Search</a></li>
                 <li class="nav-item"><a class="nav-link" href="#DetailPage" data-bs-toggle="tab"><i class="fa fa-list" fa-lg></i> Detail</a></li>
-                <li class="nav-item"><a class="nav-link" href="#CommPage" data-bs-toggle="tab"><i class="fa fa-phone"></i> Comm</a></li>
                 <li class="nav-item"><a class="nav-link" href="#ReportsPage" data-bs-toggle="tab"><i class="fa fa-bar-chart fa-lg"></i> Reports</a></li>
                 <li class="nav-item"><a class="nav-link" href="#AdminPage" data-bs-toggle="tab"><i class="fa fa-usd fa-lg"></i> Admin</a></li>
                 <li class="nav-item"><a class="nav-link" href="#ConfigPage" data-bs-toggle="tab"><i class="fa fa-cog fa-lg"></i> Config</a></li>
@@ -82,14 +81,13 @@
 	    <div class="tab-pane" role="tabpanel" id="DetailPage">
 			<div class="row">
 				<div class="col-sm-6 col-md-5 col-lg-4">
-
-						<!--
-						<div class="row">
-    					<div class="col-xs-6 col-sm-6">
-    					<div class="col">
-						-->
-	                		<h5 class="mt-2">Property Detail</h5>
-							<form id="UpdatePropertyForm" class="needs-validation" novalidate>
+					<!--
+					<div class="row">
+    				<div class="col-xs-6 col-sm-6">
+    				<div class="col">
+					-->
+	                <h5 class="mt-2">Property Detail</h5>
+					<form id="UpdatePropertyForm" class="needs-validation" novalidate>
 								<table class="table table-sm table-borderless">
 									<tbody>
 										<tr class="small"><th>Parcel Id:</th><td><input id="Parcel_ID" name="Parcel_ID" type="text" readonly></td></tr>
@@ -143,8 +141,7 @@
 
 								<div id="DetailMessageDisplay" class="m-2"></div>
 								<div id="UpdatePropertyMessageDisplay" class="m-2"></div>
-							</form>
-
+					</form>
 				</div>
 
 				<div class="col-sm-6 col-md-7 col-lg-8">
@@ -174,18 +171,18 @@
 	                    		type="button" class="btn btn-primary reportRequest form-control mr-2 mb-2"><i class="fa fa-handshake-o fa-lg float-left"></i>Sales Report</button>
 	                    	<button id="SalesNewOwnerReport" data-reportTitle="County Reported Sales of HOA properties (for New Owner maintenance)"
 	                    		type="button" class="btn btn-primary reportRequest form-control mr-2 mb-2"><i class="fa fa-users fa-lg float-left"></i>New Owners</button>
+							<!-- 
 	                    	<button id="UnpaidDuesReport" data-reportTitle="Unpaid Dues Report"
 	                    		type="button" class="btn btn-primary reportRequest form-control mr-2 mb-2"><i class="fa fa-usd fa-lg float-left"></i>Unpaid Dues</button>
 	                    	<button id="PaidDuesReport" data-reportTitle="Paid Dues Report"
 	                    		type="button" class="btn btn-primary reportRequest form-control mr-2 mb-2"><i class="fa fa-usd fa-lg float-left"></i>Paid Dues</button>
-	                    	<button id="PaidDuesCountsReport" data-reportTitle="Paid Dues Counts Report"
-	                    		type="button" class="btn btn-primary reportRequest form-control mr-2 mb-2"><i class="fa fa-usd fa-lg float-left"></i>Paid Dues Counts</button>
 	                    	<button id="PropertyOwnerReport" data-reportTitle="Property/Owner Report"
 								type="button" class="btn btn-primary reportRequest form-control mr-2 mb-2"><i class="fa fa-user fa-lg float-left"></i>Property Owner</button>
+							-->
+	                    	<button id="PaidDuesCountsReport" data-reportTitle="Paid Dues Counts Report"
+	                    		type="button" class="btn btn-primary reportRequest form-control mr-2 mb-2"><i class="fa fa-usd fa-lg float-left"></i>Paid Dues Counts</button>
 							<button id="UnpaidDuesRankingReport" data-reportTitle="Unpaid Dues Ranking Report"
 								type="button" class="btn btn-primary reportRequest form-control mr-2 mb-2"><i class="fa fa-bank fa-lg float-left"></i>Unpaid Dues Ranking</button>
-                            <button id="IssuesReport" data-reportTitle="Issues Report" type="button"
-                                class="btn btn-primary reportRequest form-control mr-2 mb-2"><i class="fa fa-exclamation-triangle fa-lg float-left"></i>Issues Report</button>
                             <button data-reportTitle="Mailing List" type="button"
                                 class="btn btn-primary reportFilter form-control mr-2 mb-2"><i class="fa fa-envelope fa-lg float-left"></i>Mailing List</button>
 		                </div>
@@ -196,10 +193,10 @@
                         <div id="ReportFilter" class="m-3"></div>
                         <h5 id="ReportHeader"></h5>
 	                	<h6 id="ReportRecCnt"></h6>
-			            <table id="ReportListDisplay" class="table table-striped table-sm small">
-			            	<tbody>
-			               	</tbody>
-						</table>
+						<table class="table table-striped table-sm">
+				        	<tbody id="ReportListTbody">
+				        	</tbody>
+				    	</table>
 					</div>
 				</div>
 	    </div><!-- end of Reports -->
@@ -275,8 +272,8 @@
 
 <!-- Modal -->
 <div class="modal fade" id="aboutDialog" role="dialog" tabindex="-1">
-	    <div class="modal-dialog modal-lg">
-	      <div class="modal-content">
+	<div class="modal-dialog modal-lg">
+	    <div class="modal-content">
 	        <div class="modal-header">
 	          <h5 class="modal-title">
 	          	<img src="images/logo-photo.jpg">
@@ -285,18 +282,15 @@
 			  <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
 	        </div>
 	        <div class="modal-body">
-              <p>(C) Copyright 2024, All rights reserved. </p>
+            <p>(C) Copyright 2025, All rights reserved. </p>
             </br>
-              <a href="privacy.html"><i class="fa fa-briefcase"></i> privacy policy</a>
-
+            <a href="privacy.html"><i class="fa fa-briefcase"></i> privacy policy</a>
 	        </div>
 	        <div class="modal-footer">
 	          <button type="button" class="btn btn-sm btn-info" data-bs-dismiss="modal">Close</button>
 	        </div>
-
-
-	      </div>
 	    </div>
+	</div>
 </div>
 
 
@@ -587,15 +581,6 @@
     </div>
 </div>
 
-<!--
-	    <div class="tab-pane" role="tabpanel" id="CommPage">
-			<h5>Communications</h5>
-		    <div id="CommunicationsNew"></div>
-		    <p>
-		    	<div id="CommunicationsParcel"></div>
-			</p>
-	 	</div>
--->
 <div id="CommunicationsModal" class="modal fade" role="dialog" tabindex="-1">
     <div class="modal-dialog modal-xl">
         <div class="modal-content">
@@ -611,17 +596,13 @@
 					<div class="row">			
 						<div class="col"><!-- Col 1 -->
 							<input id="commParcel_ID" name="Parcel_ID" type="text" readonly hidden>
-
 							<table class="table table-striped table-sm ">
 								<tbody id="CommunicationsTbody">
 								</tbody>
 							</table>
-
 						</div>
-
 					</div>
 				</form>
-
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
@@ -724,7 +705,6 @@
 <!-- Hidden Print Area -->
 <div id="printArea" class="d-none d-print-block" ></div>
 
-
     <!-- Bootstrap core JavaScript ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <!-- Bootstrap 5 JavaScript Bundle with Popper -->
@@ -733,18 +713,5 @@
 
     <script src="js/main.js" type="module"></script>
 
-	<!--
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/3.0.1/jspdf.es.min.js" type="module"></script>
-		>>>>>> I'm now just referencing these as modules from main
-	<script src="js/util.js?ver=2.019"></script>
-	<script src="js/config.js?ver=2.016"></script>
-	<script src="js/search.js?ver=2.016"></script>
-    <script src="js/detail.js?ver=2.019"></script>
-	<script src="js/communications.js?ver=2.016"></script>
-	<script src="js/pdfModule.js?ver=2.016"></script>
-	<script src="js/reports.js?ver=2.022"></script>
-	<script src="js/admin.js?ver=2.023"></script>
-	-->
- 
 </body>
 </html>
