working on reports

--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -168,9 +168,13 @@
 
 		                <div class="form-group">
 	                    	<button id="SalesReport" data-reportTitle="County Reported Sales of HOA properties"
-	                    		type="button" class="btn btn-primary reportRequest form-control mr-2 mb-2"><i class="fa fa-handshake-o fa-lg float-left"></i>Sales Report</button>
-	                    	<button id="SalesNewOwnerReport" data-reportTitle="County Reported Sales of HOA properties (for New Owner maintenance)"
-	                    		type="button" class="btn btn-primary reportRequest form-control mr-2 mb-2"><i class="fa fa-users fa-lg float-left"></i>New Owners</button>
+	                    		type="button" role="button" class="btn btn-primary reportRequest me-1 mb-2">
+								<i class="fa fa-handshake-o"></i> Sales Report
+							</button>
+							<button id="SalesNewOwnerReport" data-reportTitle="County Reported Sales of HOA properties (for New Owner maintenance)" 
+	                    		type="button" role="button" class="btn btn-primary reportRequest me-1 mb-2">
+								<i class="fa fa-users fa-lg float-left"></i> New Owners
+							</button>
 							<!-- 
 	                    	<button id="UnpaidDuesReport" data-reportTitle="Unpaid Dues Report"
 	                    		type="button" class="btn btn-primary reportRequest form-control mr-2 mb-2"><i class="fa fa-usd fa-lg float-left"></i>Unpaid Dues</button>
@@ -180,11 +184,16 @@
 								type="button" class="btn btn-primary reportRequest form-control mr-2 mb-2"><i class="fa fa-user fa-lg float-left"></i>Property Owner</button>
 							-->
 	                    	<button id="PaidDuesCountsReport" data-reportTitle="Paid Dues Counts Report"
-	                    		type="button" class="btn btn-primary reportRequest form-control mr-2 mb-2"><i class="fa fa-usd fa-lg float-left"></i>Paid Dues Counts</button>
+	                    		type="button" role="button" class="btn btn-success reportRequest me-1 mb-2">
+								<i class="fa fa-usd"></i> Paid Dues Counts
+							</button>
 							<button id="UnpaidDuesRankingReport" data-reportTitle="Unpaid Dues Ranking Report"
-								type="button" class="btn btn-primary reportRequest form-control mr-2 mb-2"><i class="fa fa-bank fa-lg float-left"></i>Unpaid Dues Ranking</button>
-                            <button data-reportTitle="Mailing List" type="button"
-                                class="btn btn-primary reportFilter form-control mr-2 mb-2"><i class="fa fa-envelope fa-lg float-left"></i>Mailing List</button>
+								type="button" role="button" class="btn btn-warning reportRequest me-1 mb-2">
+								<i class="fa fa-bank"></i> Unpaid Dues Ranking
+							</button>
+                            <button data-reportTitle="Mailing List" type="button" role="button"
+                                class="btn btn-primary reportFilter me-1 mb-2">
+								<i class="fa fa-envelope"></i> Mailing List</button>
 		                </div>
 
 					</div>
